# Users-Service-TA

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  sql_app.db
.github/workflows/: ci.yml
src/app/adapters/db/: orm.py  utils.py
src/app/adapters/entrypoints/: application.py  r2_client.py  response_status_codes.py
src/app/adapters/entrypoints/api/: base.py  utils.py
src/app/adapters/entrypoints/api/v1/: route_admin.py  route_login.py  route_student.py  route_students.py  (+2 more)
src/app/adapters/repositories/: admin.py  student.py  students.py  teacher.py  user.py
src/app/adapters/unit_of_works/: admin.py  student.py  teacher.py  user.py
src/app/adapters/use_cases/: admin.py  student.py  students.py  teacher.py  user.py
src/app/configurator/: config.py  containers.py  r2_config.py
src/app/configurator/common/: security.py
src/app/domain/models/: admin.py  student.py  teacher.py  user.py
src/app/domain/ports/common/: responses.py
src/app/domain/ports/repositories/: admin.py  student.py  students.py  teacher.py  user.py
src/app/domain/ports/unit_of_works/: admin.py  student.py  students.py  teacher.py  user.py
src/app/domain/ports/use_cases/: admin.py  student.py  students.py  teacher.py  user.py
src/app/domain/schemas/: admin.py  student.py  teacher.py  user.py  user_base.py
src/domain/models/: admin.py  student.py  teacher.py
src/domain/schemas/: admin.py  student.py  teacher.py  user_base.py
tests/: conftest.py  fake_container.py
tests/test_routes/: test_admin.py  test_student.py  test_teacher.py  test_user.py
